# MCP-Template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
scripts/: rotate_token.py  set_oauth_password.py  smoke_test.py
template_mcp/: __init__.py  audit.py  oauth.py  oauth_routes.py  ratelimit.py  server.py  snapshot.py  storage.py  validators.py
