[project]
name = "template-mcp"
version = "0.1.0"
description = "Production-ready MCP-Server-Template mit Bearer + OAuth 2.1 Dual-Auth"
requires-python = ">=3.11"
dependencies = [
    # Core MCP + ASGI — Major-Versionen gepinnt fuer Stabilitaet
    "mcp[cli]>=1.2.0,<2.0",
    "starlette>=0.37.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    # OAuth 2.1
    "pyjwt>=2.8.0,<3.0",
    "bcrypt>=4.1.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["template_mcp"]
